# pixel-NN

./: .gitignore  3modelroc.ipynb  CMakeLists.txt  K-Fold Validation - Copy.ipynb  K-Fold Validation.ipynb  New Tensorflow Model.ipynb  Plot ROCs.ipynb  Plot kfold ROCs.ipynb  README  README.md  Split Dataset Nov29.ipynb  Split Dataset.ipynb  applykfold.bat  applyrocs.bat  commands.txt  cutoff.ipynb  plots.ipynb  runcmd.TXT  slurm-836596.out  slurm-953311.out  slurmrun.sh  testNumberNetwork.h5  testNumberNetwork.history.h5  trainNN.bat
.ipynb_checkpoints/: K-Fold Validation-checkpoint.ipynb  New Tensorflow Model-checkpoint.ipynb  Split Dataset-checkpoint.ipynb
Root/: ClustersLoop.cxx  LinkDef.h  PixelNNUtils.cxx  TTrainedNetworkNormalization.cxx  ValidationLoop.cxx
deprecated/: 3modelroc.ipynb  trainNN.bat
joboptions/: NNinput.py  NNinput_pos2.py
modelWeights/: 812.h5  812.history.h5  812_sigmoid.h5  812_sigmoid.history.h5  813two.h5  813two.history.h5  814.h5  814.history.h5  814_sigmoid.h5  824.h5  824.history.h5  824_manual_offset.h5  824_sigmoid.h5  824_training_offset.h5  824_training_offset3.h5  824sigmoid_newstruct.h5  LGconfig.json  LGmodelweights.h5  NumberNetworkKFOLD1.h5  NumberNetworkKFOLD2.h5  NumberNetworkKFOLD3.h5  NumberNetworkKFOLD4.h5  NumberNetworkKFOLD6.h5  NumberNetworkKFOLD7.h5  NumberNetworkKFOLD9.h5  bopingtraining.h5  bopingtraining2.h5  evensplit_equalfrac_smallsample.history.h5  jz7w_evensplitlayers_equalfrac.history.h5  naturalsplit.h5  naturalsplit_sigmoid.h5  naturalsplit_sigmoid.history.h5  noOffsetScaleconfig.json  test.h5  (+6 more)
(+141 files in other folders)
